Source/JavaScriptCore/llint/LLIntOffsetsExtractor.cpp
@@ -80,7 +80,7 @@ const int64_t* LLIntOffsetsExtractor::dummy()
 // classes friends with LLIntOffsetsExtractor, and include the header here, to get the C++
 // compiler to kindly step aside and yield to our best intentions.
 #include "LLIntDesiredOffsets.h"
-    return extractorTable;
+    return offsetExtractorTable;
 }
 
 } // namespace JSC
